--- a/gui/Menu.ui
+++ b/gui/Menu.ui
@@ -11,7 +11,7 @@
    </rect>
   </property>
   <property name="windowTitle">
-   <string>MainWindow</string>
+   <string>Group 7 Final Year Project</string>
   </property>
   <property name="styleSheet">
    <string notr="true">QMainWindow {
