--- a/gui/Translator.ui
+++ b/gui/Translator.ui
@@ -11,7 +11,7 @@
    </rect>
   </property>
   <property name="windowTitle">
-   <string>Frame</string>
+   <string>Translator</string>
   </property>
   <property name="styleSheet">
    <string notr="true">QFrame {
