--- a/gui/WD.ui
+++ b/gui/WD.ui
@@ -11,7 +11,7 @@
    </rect>
   </property>
   <property name="windowTitle">
-   <string>Group-7 Final Year Project</string>
+   <string>OCR extension</string>
   </property>
   <property name="styleSheet">
    <string notr="true">QFrame {
